--- a/about.html
+++ b/about.html
@@ -1,1 +1,34 @@
 <!-- about.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About | Tulsi Kumar</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
+<link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+
+<nav class="bg-white shadow-md p-4 sticky top-0 z-50">
+  <div class="container mx-auto flex justify-between items-center">
+      <div class="text-xl font-bold">Tulsi Kumar</div>
+      <ul class="flex space-x-6">
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="about.html" class="nav-link">About</a></li>
+          <li><a href="robotics.html" class="nav-link">Robotics</a></li>
+          <li><a href="cv.html" class="nav-link">Computer Vision</a></li>
+          <li><a href="automation.html" class="nav-link">Automation</a></li>
+          <li><a href="genai.html" class="nav-link">Gen AI</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+  </div>
+</nav>
+
+<section class="text-center py-20 bg-gradient-to-r from-indigo-600 to-purple-600 text-white">
+    <h1 class="text-5xl font-bold mb-4">About Me</h1>
+    <p class="text-xl max-w-3xl mx-auto">I am Tulsi Kumar, an AI & Robotics Engineer with experience in Computer Vision, Automation, and Generative AI. I work on innovative projects using Python, ROS, and modern AI frameworks.</p>
+</section>
+
+</body>
+</html>
