--- a/robotics.html
+++ b/robotics.html
@@ -1,1 +1,54 @@
 <!-- robotics.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Robotics | Tulsi Kumar</title>
+<style>
+/* Same styling as about.html */
+* { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
+body { background: #f5f5f5; color:#333; line-height:1.6; }
+header { background: linear-gradient(90deg, #000000, #1ecbe2, #4f46e5, #8b5cf6); background-size:400% 400%; animation: gradientBG 15s ease infinite; color:#fff; padding:20px 0; position:sticky; top:0; z-index:1000; box-shadow:0 4px 15px rgba(0,0,0,0.2); }
+nav { display:flex; justify-content:center; gap:30px; flex-wrap:wrap; }
+nav a { color:#fff; text-decoration:none; font-weight:bold; transition: all 0.3s; padding:8px 12px; border-radius:6px; }
+nav a:hover { background: rgba(255,255,255,0.2); transform: scale(1.1); }
+.hero { text-align:center; padding:100px 20px; background: linear-gradient(135deg, #6a11cb, #2575fc); color:#fff; border-radius: 0 0 50% 50% / 20%; position:relative; overflow:hidden; }
+.hero h1 { font-size:3em; margin-bottom:20px; animation: fadeIn 2s ease-in-out; }
+.hero p { font-size:1.2em; margin-bottom:30px; animation: fadeIn 2s 0.5s ease-in-out; }
+section { padding:80px 20px; max-width:1000px; margin:auto; }
+footer { text-align:center; padding:50px 20px; background:#111; color:#fff; margin-top:50px; }
+@keyframes fadeIn { from {opacity:0; transform: translateY(20px);} to {opacity:1; transform: translateY(0);} }
+@keyframes gradientBG { 0% {background-position:0% 50%;} 50% {background-position:100% 50%;} 100% {background-position:0% 50%;} }
+</style>
+</head>
+<body>
+
+<header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="robotics.html">Robotics</a>
+        <a href="cv.html">CV</a>
+        <a href="automation.html">Automation</a>
+        <a href="genai.html">GenAI</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <h1>Robotics Projects</h1>
+    <p>Building autonomous systems, robotic arms, and embedded automation solutions.</p>
+</section>
+
+<section>
+    <h2>Featured Projects</h2>
+    <p>Robotics Arm Control | ROS Simulation | Embedded Automation Systems</p>
+</section>
+
+<footer>
+    &copy; 2025 Tulsi Kumar | Designed with ❤️
+</footer>
+
+</body>
+</html>
